# RadarAnalysisCorp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: PLAN.md
radar_warning_game/: __init__.py  play.py
radar_warning_game/data/: cache.py  dealias_ray.py  live.py  prefetch.py  radar_repair.py  radar_s3.py  reports.py  sites.py  spc_svrgis.py  sweep_index.py
radar_warning_game/game/: clock.py  event_reveal.py  replay.py  round_builder.py  session.py
radar_warning_game/geo/: polygons.py  projection.py
radar_warning_game/net/: multiplayer.py  peer.py  protocol.py
radar_warning_game/ui/: app.py  colormaps.py  colors.py  controls.py  day_picker.py  host_map.py  leaderboard.py  mcd_form.py  motion_tool.py  overlay_loader.py  overview_map.py  play_view.py  poly_editor.py  prefetch_progress.py  radar_panel.py  recap_map.py  room_dialogs.py  team_lobby.py  time_distribution.py  time_format.py  warning_form.py
radar_warning_game/verification/: pibs.py  reports_in_poly.py  scoring.py  tornado_tiers.py
resources/: RADARS.txt
resources/cities/: us_cities.csv
resources/colormaps/: samVELBV.pal
scripts/: build_us_cities.py  diagnose_dealias.py
signaling_server/: server.py
tests/: test_cache.py  test_clock.py  test_colors.py  test_date_blinding.py  test_dealias_ray.py  test_event_reveal.py  test_iem_lsr_parse.py  test_live.py  test_multiplayer_appliers.py  test_pibs.py  test_polygons.py  test_prefetch_preload_progress.py  test_prefetch_progress_widget.py  test_projection.py  test_protocol.py  test_radar_repair_nyquist.py  test_replay.py  test_reports.py  test_reports_in_poly.py  test_round_builder.py  test_scoring.py  test_session.py  test_sites.py  test_start_gate.py  test_sweep_index.py  test_team_lobby.py  test_team_visibility.py  test_tornado_tiers.py
