[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radaranalysiscorp"
version = "0.1.0"
description = "Multiplayer radar nowcasting + warning issuance game"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.6",
  "matplotlib>=3.8",
  "cartopy>=0.22",
  "numpy>=1.26",
  "pandas>=2.0",
  "shapely>=2.0",
  "arm_pyart>=1.18",
  "metpy>=1.6",
  "boto3>=1.34",
  "botocore>=1.34",
  "requests>=2.31",
  "aiortc>=1.7",
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-qt>=4.4",
]
server = [
  "aiohttp>=3.9",
]

[project.scripts]
radaranalysiscorp = "radar_warning_game.play:main"
radaranalysiscorp-signal = "signaling_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["radar_warning_game", "signaling_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
