[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radaranalysiscorp"
version = "0.1.0"
description = "Multiplayer radar nowcasting + warning issuance game"
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.6",
  # qasync runs Qt's GUI event loop and asyncio on a single thread so the
  # aiortc WebRTC peer + the PyQt widgets cohabit without thread hops.
  "qasync>=0.27",
  "pyqtgraph>=0.14",
  # matplotlib is still pulled in transitively by pyqtgraph's colormap
  # bridge (we use mpl-registered colormaps like ChaseSpectral via pyart).
  "matplotlib>=3.8",
  # cartopy is used at *load time only* (shapereader downloads Natural
  # Earth shapefiles). No cartopy projection / matplotlib axes are used
  # at runtime — rendering is pyqtgraph + a CPU polar shader (numpy
  # ufunc gather + LUT) that drives a single pg.ImageItem per panel.
  "cartopy>=0.22",
  "numpy>=1.26",
  "pandas>=2.0",
  "shapely>=2.0",
  "arm_pyart>=1.18",
  "boto3>=1.34",
  "botocore>=1.34",
  "requests>=2.31",
  "aiortc>=1.7",
  "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-qt>=4.4",
]
server = [
  "aiohttp>=3.9",
]

[project.scripts]
radaranalysiscorp = "radar_warning_game.play:main"
radaranalysiscorp-signal = "signaling_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["radar_warning_game", "signaling_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
